tests/snapshots/notebook_test__test_nbformat45_expected_drop_id_cli_text.snap
---
source: tests/notebook_test.rs
expression: output.stdout.to_str().unwrap()
---
tests/e2e_notebooks/test_nbformat45.ipynb:cell 0: Found cell with output
tests/e2e_notebooks/test_nbformat45.ipynb:cell 1: Found cell with output
tests/e2e_notebooks/test_nbformat45.ipynb:cell 2: Found cell with output
tests/e2e_notebooks/test_nbformat45.ipynb:cell 0: Found cell with execution count
tests/e2e_notebooks/test_nbformat45.ipynb:cell 1: Found cell with execution count
tests/e2e_notebooks/test_nbformat45.ipynb:cell 2: Found cell with execution count
tests/e2e_notebooks/test_nbformat45.ipynb:cell 0: Found cell with Id
tests/e2e_notebooks/test_nbformat45.ipynb:cell 1: Found cell with Id
tests/e2e_notebooks/test_nbformat45.ipynb:cell 2: Found cell with Id
tests/e2e_notebooks/test_nbformat45.ipynb:cell 3: Found cell with Id
tests/e2e_notebooks/test_nbformat45.ipynb:cell 4: Found cell with Id
tests/e2e_notebooks/test_nbformat45.ipynb:cell 1: Found cell metadata cell.metadata.scrolled
tests/e2e_notebooks/test_nbformat45.ipynb:nbformat_minor version 5 to be downgraded.
