tests/snapshots/notebook_test__test_nbformat45_expected_sequential_id_cfg_json.snap
---
source: tests/notebook_test.rs
expression: output.stdout.to_str().unwrap()
---
[
  {
    "path": "tests/e2e_notebooks/test_nbformat45.ipynb",
    "type": "ClearOutput",
    "cell_number": 0
  },
  {
    "path": "tests/e2e_notebooks/test_nbformat45.ipynb",
    "type": "ClearOutput",
    "cell_number": 1
  },
  {
    "path": "tests/e2e_notebooks/test_nbformat45.ipynb",
    "type": "ClearOutput",
    "cell_number": 2
  },
  {
    "path": "tests/e2e_notebooks/test_nbformat45.ipynb",
    "type": "ClearCount",
    "cell_number": 0
  },
  {
    "path": "tests/e2e_notebooks/test_nbformat45.ipynb",
    "type": "ClearCount",
    "cell_number": 1
  },
  {
    "path": "tests/e2e_notebooks/test_nbformat45.ipynb",
    "type": "ClearCount",
    "cell_number": 2
  },
  {
    "path": "tests/e2e_notebooks/test_nbformat45.ipynb",
    "type": "ClearId",
    "cell_number": 0
  },
  {
    "path": "tests/e2e_notebooks/test_nbformat45.ipynb",
    "type": "ClearId",
    "cell_number": 1
  },
  {
    "path": "tests/e2e_notebooks/test_nbformat45.ipynb",
    "type": "ClearId",
    "cell_number": 2
  },
  {
    "path": "tests/e2e_notebooks/test_nbformat45.ipynb",
    "type": "ClearId",
    "cell_number": 3
  },
  {
    "path": "tests/e2e_notebooks/test_nbformat45.ipynb",
    "type": "ClearId",
    "cell_number": 4
  },
  {
    "path": "tests/e2e_notebooks/test_nbformat45.ipynb",
    "type": "CellStripMeta",
    "cell_number": 1,
    "extra_key": "cell.metadata.scrolled"
  }
]
