tests/snapshots/notebook_test__test_strip_init_cells_cfg_text.snap
---
source: tests/notebook_test.rs
expression: output.stdout.to_str().unwrap()
---
tests/e2e_notebooks/test_strip_init_cells.ipynb:cell 1: Found cell with output
tests/e2e_notebooks/test_strip_init_cells.ipynb:cell 1: Found cell with execution count
tests/e2e_notebooks/test_strip_init_cells.ipynb:cell 1: Found cell metadata cell.metadata.collapsed
