tests/snapshots/notebook_test__test_strip_init_cells_cli_json.snap
---
source: tests/notebook_test.rs
expression: output.stdout.to_str().unwrap()
---
[
  {
    "path": "tests/e2e_notebooks/test_strip_init_cells.ipynb",
    "type": "ClearOutput",
    "cell_number": 1
  },
  {
    "path": "tests/e2e_notebooks/test_strip_init_cells.ipynb",
    "type": "ClearCount",
    "cell_number": 1
  },
  {
    "path": "tests/e2e_notebooks/test_strip_init_cells.ipynb",
    "type": "CellStripMeta",
    "cell_number": 1,
    "extra_key": "cell.metadata.collapsed"
  }
]
