tests/snapshots/notebook_test__test_unicode_json.snap
---
source: tests/notebook_test.rs
expression: output.stdout.to_str().unwrap()
---
[
  {
    "path": "tests/e2e_notebooks/test_unicode.ipynb",
    "type": "ClearOutput",
    "cell_number": 0
  },
  {
    "path": "tests/e2e_notebooks/test_unicode.ipynb",
    "type": "ClearCount",
    "cell_number": 0
  },
  {
    "path": "tests/e2e_notebooks/test_unicode.ipynb",
    "type": "CellStripMeta",
    "cell_number": 0,
    "extra_key": "cell.metadata.collapsed"
  }
]
